--- a/assets/style/root.css
+++ b/assets/style/root.css
@@ -1,13 +1,16 @@
 :root {
     /* height */
-	--footer_height: 50px;
-	--header_procent: 0.15;
-    --class_heigth: 300px;
+    --footer_height: 0.03;
+    --timetable_img_height: 0.7;
+	--header_height: 0.1;
+    --class_heigth: 0.15;
     
     /* color */
     --c_main: #3498DB;
     --c_gray: #aaa;
+    --c_gray_light: #ddd;
     --c_white: #fff;
+    --c_black: #000;
 
     /* count */
     --count_class: 4;
